--- a/client/package.json
+++ b/client/package.json
@@ -4,11 +4,13 @@
   "private": true,
   "proxy": "http://localhost:3001/",
   "dependencies": {
+    "chart.js": "^2.7.3",
     "es6-promise": "^4.2.4",
     "isomorphic-fetch": "^2.2.1",
     "jquery": "^3.3.1",
     "popper.js": "^1.14.3",
     "react": "^16.7.0",
+    "react-chartjs-2": "^2.7.4",
     "react-dom": "^16.7.0",
     "react-redux": "^5.1.1",
     "react-router-dom": "^4.3.1",
