--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "dependencies": {
     "react": "^16.5.2",
     "react-datepicker": "^2.0.0",
-    "react-dom": "^16.5.2"
+    "react-dom": "^16.5.2",
+    "react-select": "^2.2.0"
   }
 }
