--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "private": true,
   "dependencies": {
     "jquery": "^3.3.1",
+    "materialize-css": "^1.0.0-rc.2",
     "react": "^16.5.2",
     "react-datepicker": "^2.0.0",
     "react-dom": "^16.5.2",
