--- a/package.json
+++ b/package.json
@@ -2,11 +2,16 @@
   "name": "weightTracker",
   "private": true,
   "dependencies": {
+    "@date-io/date-fns": "^1.0.1",
+    "@material-ui/core": "^3.8.3",
+    "date-fns": "^1.30.1",
     "jquery": "^3.3.1",
+    "material-ui-pickers": "^2.1.1",
     "materialize-css": "^1.0.0-rc.2",
     "react": "^16.5.2",
     "react-datepicker": "^2.0.0",
     "react-dom": "^16.5.2",
-    "react-select": "^2.2.0"
+    "react-select": "^2.2.0",
+    "typeface-roboto": "0.0.54"
   }
 }
