--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "dependencies": {
     "@date-io/date-fns": "^1.0.1",
     "@material-ui/core": "^3.8.3",
-    "date-fns": "^1.30.1",
+    "date-fns": "^2.0.0-alpha.25",
     "jquery": "^3.3.1",
     "material-ui-pickers": "^2.1.1",
     "materialize-css": "^1.0.0-rc.2",
