--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "name": "weighttracker",
   "version": "1.0.0",
+  "version": "1.0.0",
+  "engines": {
+    "node": "6.3.1"
+  },
   "description": "This README would normally document whatever steps are necessary to get the application up and running.",
   "main": "index.js",
   "directories": {
@@ -8,19 +12,10 @@
     "test": "test"
   },
   "scripts": {
-    "scripts": {
     "build": "cd client && npm install && npm run build && cd ..",
     "deploy": "cp -a client/build/. public/",
     "postinstall": "npm run build && npm run deploy && echo 'Client built!'"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/Crittenbach1/weightTracker.git"
-  },
   "author": "",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/Crittenbach1/weightTracker/issues"
-  },
-  "homepage": "https://github.com/Crittenbach1/weightTracker#readme"
+  "license": "ISC"
 }
